tests/baselines/reference/getterControlFlowStrictNull.errors.txt
tests/cases/compiler/getterControlFlowStrictNull.ts(2,9): error TS2366: Function lacks ending return statement and return type does not include 'undefined'.
tests/cases/compiler/getterControlFlowStrictNull.ts(11,14): error TS2366: Function lacks ending return statement and return type does not include 'undefined'.
tests/cases/compiler/getterControlFlowStrictNull.ts(20,9): error TS2366: Function lacks ending return statement and return type does not include 'undefined'.


==== tests/cases/compiler/getterControlFlowStrictNull.ts (3 errors) ====
    class A {
       a(): string | null {
            ~~~~~~~~~~~~~
!!! error TS2366: Function lacks ending return statement and return type does not include 'undefined'.
            if (Math.random() > 0.5) {
                return '';
            }
    
            // it does error here as expected
        }
    }
    class B {
        get a(): string | null {
                 ~~~~~~~~~~~~~
!!! error TS2366: Function lacks ending return statement and return type does not include 'undefined'.
            if (Math.random() > 0.5) {
                return '';
            }
    
            // it should error here because it returns undefined
        }
    }
    class C {
        get a() {
            ~
!!! error TS2366: Function lacks ending return statement and return type does not include 'undefined'.
            if (Math.random() > 0.5) {
                return 0;
            }
    
            // it should error here because it returns undefined
        }
    
        set a(value: number) {
        }
    }
    
    // Repro from #45006
    const x: string | number = Math.random() < 0.5 ? "str" : 123;
    if (typeof x === "string") {
      let obj = {
        get prop() { return x.toUpperCase() },
        method() { return x.toUpperCase() }
      }
    }